--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,7 @@
 server:
-  # TODO: Update server port and context path to a unique value.
-  port: 8080
+  port: 8093
   servlet:
-    context-path: /template
+    context-path: /migration
 
 sentry:
   dsn: ${SENTRY_DSN:}
