--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -1,9 +1,10 @@
 spring:
   h2.console.enabled: true
   h2.console.path: /h2-console
-  datasource:
-    #driver-class-name: org.h2.Driver
+
+datasource:
+  tis:
+    driver-class-name: org.h2.Driver
     jdbc-url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
     username: sa
     password: sa
-    driverClassName: org.h2.Driver
