--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,10 +13,12 @@ spring:
   batch:
     job:
       enabled: false
+    jdbc:
+      initialize-schema: ALWAYS
 
 datasource:
   tis:
-    jdbc-url: jdbc:mysql://${TIS_DBHOST:localhost}:${TIS_DBPORT:3306}/${TIS_DBNAME:tcs}?useUnicode=${TIS_UNICODE:true}&characterEncoding=${TIS_ENCODING:utf8}&useSSL=${TIS_SSL:false}
+    jdbc-url: jdbc:mysql://${TIS_DBHOST:localhost}:${TIS_DBPORT:3306}/${TIS_DBNAME:revalidation}?useUnicode=${TIS_UNICODE:true}&characterEncoding=${TIS_ENCODING:utf8}&useSSL=${TIS_SSL:false}
     username: ${TIS_DBUSER:root}
     password: ${TIS_DBPASSWORD:}
     driver-class-name: com.mysql.jdbc.Driver
