--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
   implementation "io.sentry:sentry-logback:$sentryVersion"
 
   implementation "mysql:mysql-connector-java"
+  implementation "com.github.javafaker:javafaker:1.0.2"
   testRuntimeOnly "com.h2database:h2"
 }
 
