feat: add snapshot data migration step
TIS21-2075

--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,8 @@ dependencies {
   implementation "mysql:mysql-connector-java"
   implementation "com.github.javafaker:javafaker:1.0.2"
   testRuntimeOnly "com.h2database:h2"
+
+  implementation "com.google.code.gson:gson:2.8.5"
 }
 
 checkstyle {
